force-app/main/default/objects/Payslip__c/Payslip__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Payslip.</description>
    <label>Payslip</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Payslip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>