force-app/main/default/objects/Payslip__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <label>Payroll</label>
    <referenceTo>Payroll__c</referenceTo>
    <relationshipLabel>Payslips</relationshipLabel>
    <relationshipName>Payslips</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>